# Sandbox

./: .clang-format  .gitmodules  CMakeLists.txt  shell.nix
src/: colors.h  defines.h  types.h
src/core/: events.c  events.h  main.c
src/graphics/: renderer.c  renderer.h
src/simulation/: grid.c  grid.h  liquid.c  liquid.h  particle.c  particle.h  particles.c  particles.h  physics.c  physics.h  powder.c  powder.h
src/simulation/elements/: sand.h  water.h
src/ui/: hud.c  hud.h  mouse.c  mouse.h  text.c  text.h
src/utility/: utility.c  utility.h
